Added new folder with files

--- a/01-variables-data-types/13-number-challenge/index.html
+++ b/01-variables-data-types/13-number-challenge/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Objects</title>
+    <title>Number Chalenge</title>
 </head>
 <body>
-    <h1>Math Objects</h1> 
+    <h1>Number Chalenge</h1> 
     <script src="script.js"></script>
 </body>
 </html>
