--- a/03-global-function-scope/09-function-challenge/index.html
+++ b/03-global-function-scope/09-function-challenge/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Function Challenge</title>
+    <title>Immmediately Invoked Function Expression</title>
   </head>
   <body>
-    <h1>Function Challenge</h1>
+    <h1>Immmediately Invoked Function Expression</h1>
 
-    <script src="otherscript.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
